force-app/main/default/objects/InfoNgenArticle__c/InfoNgenArticle__c.object-meta.xml
<CustomObject>
    <label>EIG News Article</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sequence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EIG News Articles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>