force-app/main/default/objects/InfoNgenArticle__c/fields/InfongenNews__c.field-meta.xml
<CustomField>
    <fullName>InfongenNews__c</fullName>
    <label>EIG News</label>
    <referenceTo>InfongenNews__c</referenceTo>
    <relationshipName>InfoNgen_Articles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>