force-app/main/default/objects/InfoNgenArticle__c/fields/InfoNgenNewsSubject__c.field-meta.xml
<CustomField>
    <fullName>InfoNgenNewsSubject__c</fullName>
    <formula>InfongenNews__r.Subject__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EIG News Subject</label>
    <type>Text</type>
</CustomField>